--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h2>About Us</h2>
-
+<p>Welcome to Dev Match. We are a community of developers, entrepreneurs, and investors who are interested and meeting each other and sharing.</p>
